--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-# suppress inspection "UnusedProperty" for whole file
-# suppress inspection "UnusedProperty" for whole file
 
 
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/jwts
+spring.datasource.url=jdbc:mysql://localhost:3306/ivanPraksa
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -37,3 +35,5 @@ logging.level.eu.kielczewski=DEBUG
 spring.freemarker.template-loader-path=/WEB-INF/ftl
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.expose-spring-macro-helpers=true
+
+server.port=8080
